Add Javadocs and fix localizeModifier method